css/theme_black-white.css
.site-skin-metadata {
  content: "==================================================

  - Skin:         neos/theme_black-white
  - Author:       ZerafinaCSS [https://tumblr.com/zerafinacss]
  - Instructions: https://ao3.org/works/65849527
  - Repository:   https://github.com/ZerafinaCSS/neos
  - License:      MIT
  - Updated:      2026-Mar-14 18:47 UTC

  ==========================================================";
}

/*============================================================
GLOBAL VARIABLES
==============================================================

Grayscale color palette used for main backgrounds, borders, text and interaction elements:
https://coolors.co/000000-8b8b8b-b4b4b4-c1c1c1-d6d6d6-f0f0f0-f4f4f4-f8f8f8-ffffff

*/

:root {

  color-scheme:          light;                    /* which system color scheme an (unstyleable) element should render with */


/*>========== UI PARAMETERS ==========<*/

  /* space on left/right side of screen */
  --margins-header:      1rem;                     /* header on desktop */
  --margins-main:        5%;                       /* site contents on desktop */
  --margins-narrow:      2.5%;                     /* site contents and header on tablet/mobile */

  /* border-radius (= roundness of corners) */
  --radius-small:        0;                        /* smaller elements: list elements, input elements etc. */
  --radius-mid:          0;                        /* midsizde elements: dropdown menus, system messages etc. */
  --radius-big:          0;                        /* bigger elements: blurbs, forms, comments, textareas etc. */
  --radius-btn:          0;                        /* header search box, buttons */
  --radius-tag:          0;                        /* tags */

  /* icon border-radius */
  --icon-content-radius: 0;                        /* content and bookmark icon */
  --icon-primary-radius: 0;                        /* primary and comment icon */
  --icon-index-radius:   0;                        /* index icon */


/*>========== MAIN BACKGROUND COLORS ==========<*/

  --bg1:                 #FFFFFF;                  /* main background, footer etc. */
  --bg2:                 #000000;                  /* header */
  --bg3:                 #F0F0F0;                  /* dashboard */
  --bg4:                 #F4F4F4;                  /* forms, modal dialogs, javascript context etc. */
  --bg5:                 #FFFFFF;                  /* content boxes (blurbs, comments etc.), meta box */
  --bg6:                 #F8F8F8;                  /* dropdown and secondary menus, tooltips etc. */
  --bg7:                 #F0F0F0;                  /* own blurbs, listbox, some even/odd list items etc. */
  --bg8:                 #8B8B8B;                  /* collection header */


/*>========== MAIN BORDERS ==========<*/

  /* colors */
  --border1:             #D6D6D6;                  /* dashboard, footer, news, blockquote, scrollbar track etc. */
  --border2:             #C1C1C1;                  /* header, tables, forms, input elements, listbox etc. */
  --border3:             #C1C1C1;                  /* content boxes (blurbs, comments etc.), dropdown and secondary menus */
  --border4:             #B4B4B4;                  /* meta boxes, tooltips, some heading underlines, scrollbar thumb etc. */

  /* width */
  --border-width:        1px;                      /* for almost all borders (experimental - changing this might cause some weirdness) */


/*>========== SHADOWS ==========<*/
/* replace values with "none" (without quotation marks) to remove shadows */

  --shadow:              0 2.5px 15px 0 #B4B4B425; /* secondary elements, dropdowns, tooltips etc. */
  --shadow-header:       none;
  --shadow-buttons:      1px 1px 0 0 #D6D6D6;


/*>========== MAIN TEXT ==========<*/

  /* text size */
  --txt-size-main:       100%;                     /* main text size (bigger than 130% causes some issues, but is still mostly functional) */
  --txt-size-work:       110%;                     /* work text size */

  /* text colors */
  --txt-header:          #FFFFFF;                  /* header text */
  --txt-header-hgl:      #B4B4B4;                  /* selected header dropdown toggle and link items */
  --txt-header-hgl-h1:   linear-gradient(125deg, #FFFFFF, #B4B4B4); /* gradient for selected AO3 header title */
  --txt-main:            #000000;                  /* main body text */
  --txt-alt1:            #000000;                  /* announcements */
  --txt-alt2:            #FFFFFF;                  /* checkbox checkmark, help symbol, event announcements etc. */

  /* links */
  --link:                #000000;                  /* link color */
  --link-hgl:            #B4B4B4;                  /* color for hovered/focused links */
  --link-visited:        #8B8B8B;                  /* color for already visited links + header search bar icon */
  --link-underline:      1px solid;                /* link underline => add "transparent" (without quotation marks) after "solid" to make link underlines invisible */


/*>========== INTERACTION COLORS ==========<*/
/* = buttons, input and select elements */

  /* button colors */
  --int-btn-bg:          #F0F0F0;                  /* background */
  --int-btn-border:      #B4B4B4;                  /* border */
  --int-btn-txt:         #000000;                  /* text */
  --int-btn-hgl-bg:      #000000;                  /* background for hovered/focused buttons */
  --int-btn-hgl-txt:     #FFFFFF;                  /* text for hovered/focused buttons */                                                                        
  
  --int-bg:              #FFFFFF;                  /* background for input and select elements */

  --int-current-bg:      #D6D6D6;                  /* background for currently active elements */
  --int-current-txt:     #000000;                  /* text for currently active elements */
  --int-disabled-bg:     #D6D6D6;                  /* background for disabled buttons and checkboxes */
  --int-checked:         #000000;                  /* checked checkboxes and radio buttons */
  
  --int-hgl:             #8B8B8B;                  /* highlight for hovered/focused/selected elements */
  --int-hgl-bg:          #000000;                  /* background for hovered/focused list items */
  --int-hgl-txt:         #FFFFFF;                  /* text for hovered/focused list items and for collection header */


/*>========== ICON COLORS ==========<*/
/* palette: https://coolors.co/49a0bf-3da193-ffc23d-fc955c-f9677a-d04091 */

  /* bookmark and content icons (mostly) */  
  --icon1:               #3DA193;                  /* gen, complete, public bookmark */
  --icon2:               #FFC23D;                  /* teen */
  --icon3:               #49A0BF;                  /* m/m, external work */
  --icon4:               #FC955C;                  /* mature, chose not to warn, rss feed */
  --icon5:               #D04091;                  /* f/m */
  --icon6:               #F9677A;                  /* explicit, f/f, warning, incomplete */
  --icon7:               #49A0BF;                  /* private bookmark */
  --icon8:               #8B8B8B;                  /* hidden bookmark */
  --icon9:               #D04091;                  /* rec bookmark */

  /* gradient overlay for the bookmark and content icons above */
  --icon-grd:       none;


  /* other icons */
  --icon-bg:             #FFFFFF;                  /* background for empty icon box or uploaded icon with transparent background */
  --icon-id:             #8B8B8B;                  /* user, skin, tag, admin */
  --icon-anon:           #8B8B8B;                  /* guest, anonymous user */
  --icon-coll:           #8B8B8B;                  /* collection, unrevealed work */

  /* icon borders */
  --icon-border1:        #00000025;                /* border for most icons */
  --icon-border2:        #C1C1C1;                  /* uploaded, default user and mystery icon + empty symbols box */


/*>========== TAG COLORS ==========<*/

  /* background */
  --tag-default-bg:      #0000000D;
  --tag-fandom-bg:       #0000000D;
  --tag-warning-bg:      #FDC4CC;
  --tag-ship-bg:         #00000025;
  --tag-platonic-bg:     #00000025;
  --tag-character-bg:    #0000000D;
  --tag-freeform-bg:     #0000000D;

  /* text */
  --tag-default-txt:     #000000;
  --tag-fandom-txt:      #000000;
  --tag-warning-txt:     #000000;
  --tag-ship-txt:        #000000;
  --tag-platonic-txt:    #000000;
  --tag-character-txt:   #000000;
  --tag-freeform-txt:    #000000;

  /* border */
  --tag-border:          #00000025;

  /* hover and focus */
  --tag-hgl-bg:          #000000;                  /* background */
  --tag-hgl-txt:         #FFFFFF;                  /* text */


/*>========== COLORS FOR ROLES AND STATES + SYSTEM MESSAGES ==========<*/
/* palette: https://coolors.co/dff2f7-3083a1-dff7f1-3da188-fff3d9-ab7500-ffe6e9-df3047 */
 
  /* background */
  --notice-bg:           #DFF2F7; 
  --success-bg:          #DFF7F1;
  --caution-bg:          #FFF3D9;
  --alert-bg:            #FFE6E9;

  /* text (and borders) */
  --notice-txt:          #3083A1; 
  --success-txt:         #3DA188;
  --caution-txt:         #AB7500;
  --alert-txt:           #DF3047;


/*>========== FILTERS ==========<*/
/* the colors of the following elements can only be changed using filters; adjust filter values to change colors */

  --header-icon:         invert(100%);
  --header-icon-hgl:     invert(71%);              /* hover/focus */
  --kudos-icon:          brightness(0) saturate(100%) invert(55%) sepia(16%) saturate(1795%) hue-rotate(303deg) brightness(95%) contrast(106%);
  --lock-icon:           invert(100%);
  --stats-icon:          invert(55%);
  --stat-chart:          saturate(0%);
  --rich-txt-editor:     none;

}

/*============================================================
>> 13 GROUP: BLURB
============================================================*/
/* see "Archive: (13) group blurb skin" by AO3 */

/*>========== various little mods ==========<*/

/*===== mod: BOOKMARK =====*/

/* sharp edges for the bookmark ribbon */
.bookmark .blurb p.status a:not(.short a)::before {
  border-radius: 0;
}

